the nav bar glitches on mobile when scrolling up and down quickly. the bug is that the nav bar doesn't reappear sometimes. because of this, a quick fix is to link the href in the nav logo to christiantimbol.com instead of christiantimbol.com#home. the former allows the page to refresh and brings the user home, which functions as a temporary remedy if the navbar disappears on the user. also updated the mquery.css file a little

--- a/files/css/mqueries.css
+++ b/files/css/mqueries.css
@@ -218,7 +218,7 @@
 		position: relative;
 		left: 50%;
 		right: 50%; /* quick visual fix */
-		font-size: 14px; /* quick visual fix */
+		font-size: 18px; /* quick visual fix */
 	}
    
 	#portfolio-single aside { border:none; padding-top:0; }
